syntax = "proto3";

option go_package = "job_worker_service/pkg/api/proto";

package api;

service JobService {
    rpc Start(JobStartRequest) returns (JobStartResponse);
    rpc Stop(JobStopRequest) returns (JobStopResponse);
    rpc QueryStatus(JobQueryRequest) returns (JobInfo);
    rpc GetOutput(JobQueryRequest) returns (JobOutputResponse);
    rpc SubscribeOutput(JobSubscriptionRequest) returns (stream JobOutputResponse); // Updated for streaming
}

message JobStartRequest {
    string command = 1;
    repeated string args = 2;
}

message JobStartResponse {
    string jobId = 1;
}

message JobStopRequest {
    string jobId = 1;
}

message JobStopResponse {
    string status = 1; // e.g., "stopped", "not found", "error"
    string message = 2; // e.g., "Job successfully stopped", "Job not found", etc.
}

message JobQueryRequest {
    string jobId = 1;
}

message JobSubscriptionRequest {
    string jobId = 1;
}

message JobInfo {
    string jobId = 1;
    string status = 2; // e.g., "running", "stopped", "completed"
}

message JobOutputResponse {
    bytes output = 1; // The job's output, e.g., stdout, stderr
}
